--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
 
 <body>
     <div class="container">
-        <div class="container__conteudo">
-            <img src="./img/robot.png" alt="robô mergulhador" class="container__imagem-robo" />
-            <div class="container__informacoes">
-                <img src="./img/trophy.png" alt="ícone de um troféu" />
-                 <div class="container__texto">
-                    <h1>Você <span class="container__texto-azul">acertou!</span></h1>
-                    <h2>Você descobriu o número secreto!</h2>
+        <div class="container__content">
+            <img src="./img/robot.webp" alt="robot" class="container__image-robot" />
+            <div class="container__informations">
+                <img src="./img/trophy.png" alt="trophy icon" />
+                    <div class="container__text">
+                    <h1>You <span class="container__text-blue">got it!</span></h1>
+                    <h2>You got the secret number right!</h2>
                 </div>
             </div>
         </div>
